{{$NEXT}}

0.52     2025-08-09

- Really made it possible to force Specio to use only pure Perl dependencies. The changes in 0.51
  were incomplete, so lots of places still loaded the Clone (XS) module. Fixed by @arodland (Andrew
  Rodland). GH #23.


0.51     2025-06-19

- Made it possible to force Specio to only use pure Perl dependencies by setting the
  SPECIO_IMPLEMENTATION environment variable to "PP". Requested by @arodland (Andrew Rodland). GH
  #23.


0.50     2025-02-18

- Fixed a bug in the Int type that caused it to accept numbers like 124512.000000000123, which when
  stringified, are stringified as integers. Reported by @n1vux (Bill Ricker). GH #22.


0.49     2024-12-23

- Attempting to import any structured type caused a confusing "Can't store CODE items"
  error. Reported by Kerin Millar.
- Removed the "this is alpha" warning from Specio::Library::Structured. Given that I don't plan on
  making any major changes to this module, it's as production-ready as it's going to get.


0.48     2022-06-11

- Importing types into a class which inherited from another class that had
  imported types wouldn't work, leaving the child class with no `t()`
  sub. Patch by Kerin Millar.


0.47     2021-01-29

- Change Specio constraint object's stringification overloading to return the
  type name rather than the default Perl object stringification, which gives
  you something like
  "Specio::Constraint::Parameterized=HASH(0x564d258efb48)". Anonymous types
  are special cased to return something you can print.

- All types now overload the `eq` comparison operator. Moose expects types to
  be comparable in this manner when doing role summation. This fixes a bug
  reported by Martin Gruner. GH #18.


0.46     2020-03-14

- No code changes, just fixing a mistake in the POD. Reported by Petr
  Pisar. GH #17.


0.45     2019-11-24

- Made XString a prereq if installing with Perl 5.10+.


0.44     2019-08-14
