@@ -2,7 +2,8 @@ use strict;
 use warnings;
 
 use Test::More 0.96;
-use Test::Specio qw( builtins_tests describe test_constraint :vars );
+use Test::Specio
+    qw( builtins_tests create_BAR_handle_code describe test_constraint :vars );
 
 use Specio::Library::Builtins;
 
@@ -20,9 +21,12 @@ my $GLOB_OVERLOAD = _T::GlobOverload->new( \*FOO );
 
 local *BAR;
 {
-    ## no critic (InputOutput::ProhibitBarewordFileHandles, InputOutput::RequireBriefOpen)
-    open BAR, '<', $^X or die "Could not open $^X for the test";
+    local $@;
+    ## no critic (BuiltinFunctions::ProhibitStringyEval, ErrorHandling::RequireCheckingReturnValueOfEval)
+    eval create_BAR_handle_code();
+    die $@ if $@;
 }
+
 my $GLOB_OVERLOAD_FH = _T::GlobOverload->new( \*BAR );
 
 my $tests = builtins_tests( $GLOB, $GLOB_OVERLOAD, $GLOB_OVERLOAD_FH );
