@@ -17,7 +17,7 @@ BEGIN {
 use lib "$lib_path/lib";
 
 use Test::More 0.96;
-use Test::Specio qw( test_constraint :vars );
+use Test::Specio qw( create_BAR_handle_code test_constraint :vars );
 
 use Specio::Library::String;
 
@@ -35,8 +35,10 @@ my $GLOB_OVERLOAD = _T::GlobOverload->new( \*FOO );
 
 local *BAR;
 {
-    ## no critic (InputOutput::ProhibitBarewordFileHandles, InputOutput::RequireBriefOpen)
-    open BAR, '<', $^X or die "Could not open $^X for the test";
+    local $@;
+    ## no critic (BuiltinFunctions::ProhibitStringyEval, ErrorHandling::RequireCheckingReturnValueOfEval)
+    eval create_BAR_handle_code();
+    die $@ if $@;
 }
 my $GLOB_OVERLOAD_FH = _T::GlobOverload->new( \*BAR );
 
