@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+- Fixed a test failure when trying to open $^X on some platforms.
+
+
 0.52     2025-08-09
 
 - Really made it possible to force Specio to use only pure Perl dependencies. The changes in 0.51
